--- a/Alphasoft/Views/ClientView/_Section5.cshtml
+++ b/Alphasoft/Views/ClientView/_Section5.cshtml
@@ -54,6 +54,7 @@
             </div>
         }
     </div>
+    <a class="btn btn-primary btn-with-arrow mb-2" href="/ClientView/Products" style="float: right; margin-top: 30px; margin-right: 10px;">See more<span><i class="fas fa-chevron-right"></i></span></a>
 </div>
 
 <script>
