--- a/Alphasoft/Views/Home/Index.cshtml
+++ b/Alphasoft/Views/Home/Index.cshtml
@@ -150,7 +150,7 @@
     </div>
 </div>
 
-<section class="section section-height-3 bg-color-grey m-0 border-0" id="sec_5">
+<section class="section section-height-2 bg-color-grey m-0 border-0" id="sec_5" style="padding-bottom: 120px;">
     <div class="loader">
         <span></span>
         <span></span>
