--- a/Alphasoft/Views/SoftwaresCategories/Index.cshtml
+++ b/Alphasoft/Views/SoftwaresCategories/Index.cshtml
@@ -3,11 +3,9 @@
     Layout = "_Layout";
     ViewData["Title"] = "Software";
 }
-
-
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h4 class="text-info">Software Information</h4>
+        <h4 class="text-info">Software Category Information</h4>
         <button id="softwareCategory-createmodalBtn" class="btn btn-primary panel-header-create-btn" data-toggle="modal" data-target="#softwareCategory-createModal">Create</button>
     </div>
     <div class="panel-body">
@@ -37,7 +35,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title text-info">Create software Description</h4>
+                <h4 class="modal-title text-info">Create software Category Description</h4>
             </div>
             <div class="modal-body">
                 <div id="softwareCategory-createFormDiv"></div>
@@ -57,7 +55,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">Edit software Description</h4>
+                <h4 class="modal-title">Edit software Category Description</h4>
             </div>
             <div class="modal-body">
                 <div id="softwareCategory-editFormDiv"></div>
