--- a/Alphasoft/Views/Shared/_ClientLayout.cshtml
+++ b/Alphasoft/Views/Shared/_ClientLayout.cshtml
@@ -181,7 +181,7 @@
 
                                                                                     if (reminder == 0)
                                                                                     {
-                                                                                        columnNo = 12 / subMenus.Count();
+                                                                                        columnNo = 12 / softwareList.GroupBy(x=>x.SoftwareCategoryId).Count();
                                                                                     }
                                                                                     else
                                                                                     {
