--- a/Alphasoft/Views/ClientView/OurTeam.cshtml
+++ b/Alphasoft/Views/ClientView/OurTeam.cshtml
@@ -32,11 +32,13 @@
             <div class="row team-list sort-destination" data-sort-id="team">
                 @foreach (var item in Model.Teams)
                 {
+                    //string image = string.IsNullOrEmpty(item.Image) ? "/images/default-avater.jpg" : item.Image;
                     <div class="col-12 col-sm-6 col-lg-3 isotope-item @item.Department.Name.Split(" ")[0]">
                         <span class="thumb-info thumb-info-hide-wrapper-bg mb-4">
                             <span class="thumb-info-wrapper">
                                 <a href="#">
-                                    <img src="@item.Image" class="img-fluid" alt="">
+                                    <img src="@item.Image" class="img-fluid" alt="" style="height: 250px;">
+                                    <img src="" />
                                     <span class="thumb-info-title">
                                         <span class="thumb-info-inner">@item.Name</span>
                                         <span class="thumb-info-type">@item.Department.Name</span>
