--- a/Alphasoft/Views/ClientView/_CategoryWiseProducts.cshtml
+++ b/Alphasoft/Views/ClientView/_CategoryWiseProducts.cshtml
@@ -4,18 +4,21 @@
     <div class="row products product-thumb-info-list" data-plugin-masonry="" data-plugin-options="{'layoutMode': 'fitRows'}" style="position: relative; height: auto;">
         @foreach (var item in Model)
         {
-            <div class="col-sm-6 col-lg-4 product" style="position: absolute; left: 0px; top: 0px;">
-                <span class="product-thumb-info border-0">
+            <div class="col-sm-6 col-lg-4 product product-effect" style="position: absolute; left: 0px; top: 0px;">
+                @*<a href="/ClientView/Product/@item.Id">
+                        <span class="onsale">Sale!</span>
+                    </a>*@
+                <span class="product-thumb-info border-0 product-effect-span">
                     <a href="/ClientView/Product/@item.Id" class="add-to-cart-product bg-color-primary">
                         <span class="text-uppercase text-1">See Details</span>
                     </a>
-                    <a href="/ClientView/Product/@item.Id">
-                        <span class="product-thumb-info-image">
-                            <img alt="" class="img-fluid" src="@item.Image">
+                    <a href="/ClientView/Product/@item.Id" style="padding-bottom: 8px; background-color: #fff;">
+                        <span class="product-thumb-info-image" style="height: 220px; width: 100%;">
+                            <img alt="" class="img-fluid" src="@item.Image" style="height: 100%; width: 100%; object-fit: contain;">
                         </span>
                     </a>
-                    <span class="product-thumb-info-content product-thumb-info-content pl-0 bg-color-light">
-                        <a href="/ClientView/Product/@item.Id">
+                    <span class="product-thumb-info-content product-thumb-info-content pl-0 bg-color-light productHoverBorderNone">
+                        <a href="/ClientView/Product/@item.Id" style="padding: 0px 10px;">
                             <h4 class="text-4 text-primary">@item.Name</h4>
                             <span class="price">
                                 <del><span class="amount">@item.RetailPrice</span></del>
