--- a/Alphasoft/Views/ClientView/_GetCategoryWiseProducts.cshtml
+++ b/Alphasoft/Views/ClientView/_GetCategoryWiseProducts.cshtml
@@ -7,11 +7,12 @@
                 <div class="row">
                     @foreach (var item in Model)
                     {
+                        string image = string.IsNullOrEmpty(item.Image) ? "/images/no_image-preview.png" : item.Image;
                         <div class="col-md-4 col-lg-3">
                             <article class="post post-medium border-0 pb-0 mb-2">
                                 <div class="post-image">
                                     <a href="/ClientView/Product/@item.Id">
-                                        <img src="@item.Image" class="img-fluid img-thumbnail img-thumbnail-no-borders rounded-0" alt="" style="height: 180px; width: 100%;"/>
+                                        <img src="@item.Image" class="img-fluid img-thumbnail img-thumbnail-no-borders rounded-0" alt="" style="height: 180px; width: 100%;" />
                                     </a>
                                 </div>
 
