--- a/Alphasoft/wwwroot/css/custom.css
+++ b/Alphasoft/wwwroot/css/custom.css
@@ -17,7 +17,7 @@
     top: 13px;
 }
 
-.panel-heading{
+.panel-heading {
     position: relative !important;
 }
 
@@ -40,11 +40,11 @@
     margin: 70px 15.8% !important;
 }
 
-h4{
+h4 {
     font-weight: 600;
 }
 
-.modal-body form col-md-6{
+.modal-body form col-md-6 {
     padding: 0 !important;
 }
 
@@ -52,13 +52,14 @@ table tr td p {
     margin: 0 !important;
 }
 
-.image-preview{
+.image-preview {
     width: 100%;
     height: 400px;
     padding: 10px;
     border: 1px solid #333;
     margin-top: 10%;
 }
+
 .logo-preview {
     width: 100%;
     height: 400px;
@@ -72,13 +73,14 @@ table tr td p {
     height: 380px;
     object-fit: contain;
 }
-#imgpreview{
+
+#imgpreview {
     width: 100%;
     height: 380px;
     object-fit: contain;
 }
 
-a p{
+a p {
     padding: 0;
     margin: 0;
 }
@@ -98,4 +100,24 @@ a p{
         max-width: 500px;
         margin: 15.75rem auto;
     }
+}
+
+
+.productHoverBorderNone {
+    padding: 8px;
+    border-top: none;
+}
+
+.product-effect:hover > .product-effect-span {
+    -webkit-box-shadow: 0px 0px 41px -11px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 41px -11px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 41px -11px rgba(0,0,0,0.75);
+    border-radius: 8px !important;
+    transition: ease 1s;
+}
+
+.product-effect:hover > .product-thumb-info > .productHoverBorderNone {
+    
+    border-top: 1px solid #bfbfbfc7;
+    transition: ease 2s;
 }
