--- a/Alphasoft/Views/ServiceCategories/Index.cshtml
+++ b/Alphasoft/Views/ServiceCategories/Index.cshtml
@@ -15,6 +15,8 @@
                 <tr>
                     <th>Id</th>
                     <th>Name</th>
+                    <th>Description</th>
+                    <th>Image</th>
                     <th></th>
                 </tr>
             </thead>
